# agno_ai_multi_agent_financial_reports

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
agents/: equity_analyst.py  market_researcher.py  team_orchestrator.py
apps/api/: main.py  schemas.py
apps/api/routers/: analyze.py
apps/web/: manage.py
apps/web/dashboard/: views.py
apps/web/dashboard/components/: Report.jsx
apps/web/dashboard/static/dashboard/: app.js  app.umd.js  styles.css
apps/web/dashboard/templates/dashboard/: index.html
apps/web/webui/: asgi.py  settings.py  wsgi.py
core/: config.py  guardrails.py  logging.py  markdown_formatter.py  memory.py  prompts.py  types.py
scripts/: generate_pyproject_deps.py
tests/: test_agents_smoke.py  test_api.py  test_guardrails.py
tools/: finance_tools.py
