[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agno_ai_multi_agent_financial_reports"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "agno-ai-multi-agent-financial-reports>=0.1",
  "brotli>=1.2",
  "ddgs>=9.9",
  "h2>=4.3",
  "httptools>=0.7",
  "importlib-metadata>=8.0",
  "jaraco.collections>=5.1",
  "markdown2>=2.5",
  "openai>=2.7",
  "pip-chill>=1.0",
  "socksio>=1.0",
  "tomli>=2.0",
  "watchfiles>=1.1",
]

[tool.setuptools]
package-dir = {"" = "."}

# ensure packages under project root are included
[tool.setuptools.packages.find]
include = ["agents", "core", "tools", "apps", "apps.*"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true
